# Observal

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SETUP.md  pyproject.toml
.github/workflows/: deploy.yml
demo/: run_demo.sh
docker/: Dockerfile.api  docker-compose.yml
docs/: design-new-registry-types.md  telemetry-overhaul.md
observal-server/: main.py  pyproject.toml
observal-server/api/middleware/: content_type.py
observal-server/api/routes/: admin.py  agent.py  auth.py  mcp.py  otel_dashboard.py  otlp.py  review.py  telemetry.py
observal-server/models/: mcp.py
observal-server/schemas/: admin.py  auth.py  mcp.py
observal-server/services/: agent_builder.py  agent_resolver.py  clickhouse.py  mcp_validator.py  redis.py  secrets_redactor.py
observal-web/src/app/agents/: page.tsx
observal-web/src/app/agents/[id]/: page.tsx
observal-web/src/app/mcps/: page.tsx
observal-web/src/app/mcps/[id]/: page.tsx
observal-web/src/lib/: api.ts
observal_cli/: README.md  client.py  cmd_auth.py  cmd_mcp.py  cmd_uninstall.py  main.py  prompts.py  proxy.py
observal_cli/hooks/: flush_buffer.py
tests/: test_agent_composition.py  test_phase_7_8.sh  test_resilience.py  test_review_queue.py  test_secrets_redactor.py  test_shim_phase3.py
web/: README.md
web/src/app/(admin)/review/: page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(registry)/agents/: page.tsx
web/src/app/(registry)/components/[id]/: page.tsx
web/src/components/ui/: sidebar.tsx
web/src/lib/: api.ts  types.ts
