[project]
name = "observal-cli"
version = "0.1.0"
description = "Observal MCP Server Registry CLI"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "httpx",
    "rich",
]

[project.scripts]
observal = "observal_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
